
v 0.2.1 (Date: 2014-08-02)
	[Backend] Switch to jquery legacy version for better Grocery Crud support

v 0.2.0 (Date: 2014-04-15)
	[Backend] Add AdminLTE theme for backend system
	[Backend] Update overall file structure, and Login / Home page layout to adopt AdminLTE theme
	[Backend] Enable theme switch by changing DEFAULT_THEME value in backend/constants.php, or $this->mTheme value in controllers
	[Backend] Add "Profile" page with Account Info and Change Password widgets (layout only)
	[Backend] Remove sidebar_left layout because that is no longer necessary when using AdminLTE theme
	[General] Update Gruntfile.coffee for loading AdminLTE assets
	[General] Update Gruntfile.coffee for livereload when update is made on the file itself
	[General] Detect site domain to switch ENVIRONMENT value (i.e. development / production)

v 0.1.0
	Add bower for third-party package management
	Add grunt for asset pipeline management
	Add changelog.txt for logging feature updates / bug fixes
	Remove Bootswatch themes because they should be managed via bower instead of the repository itself

v 0.0.1
	Basic frontend / backend structure
	Preset layout for different pages
	Add GroceryCRUD for handling backend opertations