@@ -1,6 +1,7 @@
 
 v 0.2.1 (Date: 2014-08-02)
 	[Backend] Switch to jquery legacy version for better Grocery Crud support
+	[Backend] Added alert helper to work with setting / showing alert box more easily
 
 v 0.2.0 (Date: 2014-04-15)
 	[Backend] Add AdminLTE theme for backend system
